trunk/Archive2/a4/1781bf3cc55a41/output
main.cpp: In function 'int main()':
main.cpp:13:9: error: expected initializer before '.' token
     blah.push_back(ptr);
         ^
